--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "apollo-client": "^1.9.1",
+    "graphql": "^0.11.1",
+    "graphql-schema": "^0.5.1",
+    "graphql-tag": "^2.4.2",
     "vue": "^2.3.3",
+    "vue-apollo": "^2.1.0-beta.21",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1"
